whenever and codes

--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -55,6 +55,185 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="45" data-price="14.84">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OsRvOL"><img src="https://m.media-amazon.com/images/I/61iKD9PL9wL._SR400,400_.jpg" alt="WJPILIS Smart Watch" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2OsRvOL">WJPILIS Smart Watch Touchscreen Bluetooth Smartwatch Wrist Watch Sports Fitness Tracker with SIM SD Card Slot Camera Pedometer...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.84</span><span class="ori_price">$26.99</span>
+        <div class="tooltip_common tooltip_red"><span> + Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span> + Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">45FW44YK</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $26.99</strong> with promo code: <strong class="m_codes">45FW44YK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2OsRvOL">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LV9uf6"><img src="https://m.media-amazon.com/images/I/61w8p41VmjL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LV9uf6">Carantee USB WiFi Adapter 1200Mbps, [2019 Upgrade] Wireless Network WiFi Dongle with 5dBi Antenna for PC/Desktop/Laptop/Mac,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.49</span><span class="ori_price">$18.99</span>
+        <div class="tooltip_common tooltip_green"><span> + $1.00 off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + $1.00 off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50VZXQXP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $18.99</strong> with promo code: <strong class="m_codes">50VZXQXP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 08, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LV9uf6">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2AZ43p3"><img src="https://m.media-amazon.com/images/I/61EK-YcmahL._SR400,400_.jpg" alt="Deep Dream Gaming Headset for Xbox One.." /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2AZ43p3">Deep Dream Gaming Headset for Xbox One, PS4 and PC with Microphone, Noise Cancelling Over-Ear Headphones with Mic, Led Lights,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.99</span><span class="ori_price">$25.99</span></address>
+      <textarea readonly="readonly" class="code_area">508SYBI8</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $25.99</strong> with promo code: <strong class="m_codes">508SYBI8</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 13, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2AZ43p3">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30VsbDG"><img src="https://m.media-amazon.com/images/I/61MKsCFtpvL._SR400,400_.jpg" alt="DUTISON Phone to TV Cable" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30VsbDG">DUTISON Phone to TV Cable, Phone to HDMI Adapter Digital AV to 1080P HDTV Cord Converter Compatible for Phone X/8/8+/7/7+/6/6+/5S HDMI...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.97</span><span class="ori_price">$17.95</span></address>
+      <textarea readonly="readonly" class="code_area">505PHFY8</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $17.95</strong> with promo code: <strong class="m_codes">505PHFY8</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30VsbDG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="9.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LXRT6s"><img src="https://m.media-amazon.com/images/I/51254UgvSLL._SR400,400_.jpg" alt="OPSO Wireless Charger" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LXRT6s">OPSO Wireless Charger, 10W Ultra-Slim Wireless Charger Compatible iPhone X, iPhone 8/8 Plus, Samsung Galaxy S9 / S9+/ S8/ S8+ / S7 / Note 8 ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.60</span><span class="ori_price">$23.99</span></address>
+      <textarea readonly="readonly" class="code_area">60IFHA7S</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $23.99</strong> with promo code: <strong class="m_codes">60IFHA7S</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 11, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LXRT6s">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="18.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2AUFf1G"><img src="https://m.media-amazon.com/images/I/614m4PJpppL._SR400,400_.jpg" alt="Smart Wake-Up Light" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2AUFf1G">Smart Wake-Up Light, Alarm Clock 8 Colored Sunrise Simulation & Sleep Aid, Dual Alarm Clock with FM Radio, Compatiable ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.00</span><span class="ori_price">$35.99</span></address>
+      <textarea readonly="readonly" class="code_area">50RDB8FG</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $35.99</strong> with promo code: <strong class="m_codes">50RDB8FG</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2AUFf1G">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MpA0w5"><img src="https://m.media-amazon.com/images/I/61py6HDY9KL._SR400,400_.jpg" alt="Balfer Wireless Earbuds" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MpA0w5">Balfer Wireless Earbuds, True Wireless Bluetooth Earbuds with IPX5 Waterproof, Bluetooth Headset via 2 Modes/BT 5.0 / 8H Playtime...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.99</span><span class="ori_price">$39.98</span></address>
+      <textarea readonly="readonly" class="code_area">601R47P1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $39.98</strong> with promo code: <strong class="m_codes">601R47P1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MpA0w5">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="23.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ARTsfA"><img src="https://m.media-amazon.com/images/I/71aPeJ0FlyL._SR400,400_.jpg" alt="Smart Watch for iOS Android Phones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ARTsfA">Smart Watch for iOS Android Phones, AIVEILE 2019 Version Activity Fitness Tracker Bluetooth Bracelet Waterproof Smartwatch...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.00</span><span class="ori_price">$45.99</span>
+        <div class="tooltip_common tooltip_green"><span> + $5.00 off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + $5.00 off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50XXBD5Y</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $45.99</strong> with promo code: <strong class="m_codes">50XXBD5Y</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 08, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ARTsfA">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="5.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IuYh2M"><img src="https://m.media-amazon.com/images/I/61vgLuwPSUL._SR400,400_.jpg" alt="Baasha Curved Vent Brush For Blow Drying" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IuYh2M">Baasha Curved Vent Brush For Blow Drying, Paddle Vent Brush For Hair, Curved Brushes for Curly, Vent Brushes for Hair,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.20</span><span class="ori_price">$26.00</span></address>
+      <textarea readonly="readonly" class="code_area">80AWNK5V</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>80% off at $26.00</strong> with promo code: <strong class="m_codes">80AWNK5V</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 08, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2IuYh2M">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="40.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2AVE8ih"><img src="https://m.media-amazon.com/images/I/51WGi4Sxw7L._SR400,400_.jpg" alt="KEDSUM LED Desk Lamp with Wireless Charger" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2AVE8ih">KEDSUM LED Desk Lamp with Wireless Charger, Premium Metal Office Light with 5 Color Modes & 6 Brightness Levels, Eye-caring Desk Lamp, ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$40.80</span><span class="ori_price">$101.99</span></address>
+      <textarea readonly="readonly" class="code_area">60FNP1BJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $101.99</strong> with promo code: <strong class="m_codes">60FNP1BJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 09, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2AVE8ih">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="19.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2OwbjRh"><img src="https://m.media-amazon.com/images/I/91SbCNN7gNL._SR400,400_.jpg" alt="LotFancy Car Trunk Organizer for Auto SUV" /></a>
