--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -9,15 +9,15 @@
 
 
 /* Index Page */
-.hotdeal_card{float:left;width:23%;margin:1%;box-shadow: 0px 13px 40px -24px rgba(0,0,0,0.15);}
-.hotdeal_card .card_image{padding:15px;}
+.hotdeal_card{float:left;width:23%;margin:1%;box-shadow: 0px 13px 40px -24px rgba(0,0,0,0.15);font-family: 'Montserrat', sans-serif;}
+.hotdeal_card .card_image{padding:15px 30px 10px 30px;}
 .hotdeal_card .card_image img{width:100%;}
 .hotdeal_card .inner{padding:15px;}
-.hotdeal_card .inner p{font-size:12px;line-height:1.3;}
+.hotdeal_card .inner p{font-size:12px;line-height:1.4;height:3.7em;overflow:hidden;}
 .hotdeal_card .inner .pricing{margin:10px 0;color:#616161;}
 .hotdeal_card .inner .pricing .current{display:block;font-size:25px;color:#87c442;font-weight:600;}
-.hotdeal_card .inner .pricing .was{}
-.hotdeal_card .inner .pricing em{text-decoration:line-through;}
+.hotdeal_card .inner .pricing .was{font-size:12px;}
+.hotdeal_card .inner .pricing em{text-decoration:line-through;font-size:13px;}
 .hotdeal_card .inner .btn{}
 .hotdeal_card .inner .btn a{text-decoration:none;text-align:center;display:block;color:#616161;border:1px solid #ccc;padding:7px 10px;border-radius:3px;}
 .hotdeal_card .inner .btn a em{text-decoration:line-through;}
