--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -15,7 +15,7 @@
 
 
 <!-- <div class="filter-node most_box" data-filter='["Categories","Title"]'>
-<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a> 
+<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" title="Title" class="overlay-img" /><p>Title</p></a> 
 </div> -->
 
 <div class="filter-node most_box" data-filter='["tech","Power Bank"]'>
@@ -152,6 +152,47 @@
 <div class="filter-node most_box" data-filter='["Categories","Measuring Tools"]'>
 <a target="_blank" href="https://amzn.to/2HFZ7tl" class="overlay-container" data-overlay-text="Measuring Tools"><img src="https://images.unsplash.com/photo-1563770660834-82b48f27ec9d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Measuring Tools" class="overlay-img" /><p>Measuring Tools</p></a> 
 </div>
+
+<!-- <div class="filter-node most_box" data-filter='["home","Ranges, Ovens & Cooktops"]'>
+<a target="_blank" href="https://amzn.to/30XJF2p" class="overlay-container" data-overlay-text="Ranges, Ovens & Cooktops"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Ranges, Ovens & Cooktops" title="Ranges, Ovens & Cooktops" class="overlay-img" /><p>Ranges, Ovens & Cooktops</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["home","Dishwashers"]'>
+<a target="_blank" href="https://amzn.to/2ODrjRw" class="overlay-container" data-overlay-text="Dishwashers"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Dishwashers" title="Dishwashers" class="overlay-img" /><p>Dishwashers</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["home","Compact Refrigerators"]'>
+<a target="_blank" href="https://amzn.to/33eYPSf" class="overlay-container" data-overlay-text="Compact Refrigerators"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Compact Refrigerators" title="Compact Refrigerators" class="overlay-img" /><p>Compact Refrigerators</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["home","Blenders"]'>
+<a target="_blank" href="https://amzn.to/2AYMC84" class="overlay-container" data-overlay-text="Blenders"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Blenders" title="Blenders" class="overlay-img" /><p>Blenders</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["home","Bread Machines"]'>
+<a target="_blank" href="https://amzn.to/35hBrFD" class="overlay-container" data-overlay-text="Bread Machines"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Bread Machines" title="Bread Machines" class="overlay-img" /><p>Bread Machines</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["home","Contact Grills"]'>
+<a target="_blank" href="https://amzn.to/35kFSQb" class="overlay-container" data-overlay-text="Contact Grills"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Contact Grills" title="Contact Grills" class="overlay-img" /><p>Contact Grills</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["home","Electric Griddles"]'>
+<a target="_blank" href="https://amzn.to/31XRuq0" class="overlay-container" data-overlay-text="Electric Griddles"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Electric Griddles" title="Electric Griddles" class="overlay-img" /><p>Electric Griddles</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["home","Countertop Burners"]'>
+<a target="_blank" href="https://amzn.to/2pYhh3l" class="overlay-container" data-overlay-text="Countertop Burners"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Countertop Burners" title="Countertop Burners" class="overlay-img" /><p>Countertop Burners</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["home","Electric Cake Pop & Mini Cake Makers"]'>
+<a target="_blank" href="https://amzn.to/35kGm8X" class="overlay-container" data-overlay-text="Electric Cake Pop & Mini Cake Makers"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Electric Cake Pop & Mini Cake Makers" title="Electric Cake Pop & Mini Cake Makers" class="overlay-img" /><p>Cake Pop & Mini Cake Makers</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["home","Electric Pressure Cookers"]'>
+<a target="_blank" href="https://amzn.to/2Mviyq2" class="overlay-container" data-overlay-text="Electric Pressure Cookers"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Electric Pressure Cookers" title="Electric Pressure Cookers" class="overlay-img" /><p>Electric Pressure Cookers</p></a> 
+</div> -->
+
 
 <!-- Main Categories Three -->
 <div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
