--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -28,7 +28,7 @@
           <% @gadgets.each do |gadget| %>
             <div class="card with-photo">
               <div class="card-header">
-               <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>"></a>
+               <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
               </div>
               
               <section class="card-body">
