--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -10,7 +10,7 @@
         <%= render 'hotdeals/header' %>  
         <!-- <p>Location Map</p> -->
         <div class="show_img hotdeal_img">
-          <a target="_blank" href="<%= @hotdeal.h_link %>"><img src="<%= @hotdeal.h_image %>"></a>
+          <a target="_blank" href="<%= @hotdeal.h_link %>"><img src="<%= @hotdeal.h_image %>" alt="<%= @hotdeal.h_title %>" title="<%= @hotdeal.h_spare_04 %>"></a>
           <div class="mark">
             <span>HOT</span><em>DEALS</em>
           </div>
