--- a/app/views/hotdeals/_body_hotdeals.html.erb
+++ b/app/views/hotdeals/_body_hotdeals.html.erb
@@ -1,8 +1,8 @@
 <% @hotdeals.each do |hotdeal| %>
  <div class="card clearfix" data-score="<%= hotdeal.h_percentage %>" data-price="<%= hotdeal.h_price %>">
   <div class="image_box">
-    <a target="_blank" href="<%= hotdeal.h_link %>"><img src="<%= hotdeal.h_image %>" alt="<%= hotdeal.h_title %>" /></a>
-    <!-- < link_to (image_tag hotdeal.himage.url(:small)), hotdeal > -->
+   <a target="_blank" href="<%= hotdeal.h_link %>"><img src="<%= hotdeal.h_image %>" alt="<%= hotdeal.h_title %>" title="<%= hotdeal.h_spare_04 %>"/></a>
+    <!-- < link_to (image_tag hotdeal.himage.url(:small), alt: hotdeal.h_title, title: hotdeal.h_spare_03), hotdeal > -->
   </div>
   <div class="inner">
     <span class="regular"><em><%= hotdeal.h_percentage %>% OFF</em> + free shipping</span>
