--- a/app/views/hotdeals/_hotdeals.js.erb
+++ b/app/views/hotdeals/_hotdeals.js.erb
@@ -72,3 +72,11 @@ if(menu_status == true){
 }
 });
 //End
+
+
+/* Hover Buy Noew on Index Page */
+$(".hover").mouseleave(
+  function () {
+    $(this).removeClass("hover");
+  }
+);
