--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -9,19 +9,7 @@
 
 
 /* Index Page */
-.hotdeal_card{float:left;width:23%;margin:1%;box-shadow: 0px 13px 40px -24px rgba(0,0,0,0.15);font-family: 'Montserrat', sans-serif;}
-.hotdeal_card .card_image{padding:15px 30px 10px 30px;}
-.hotdeal_card .card_image img{width:100%;}
-.hotdeal_card .inner{padding:15px;}
-.hotdeal_card .inner p{font-size:12px;line-height:1.4;height:3.7em;overflow:hidden;}
-.hotdeal_card .inner .pricing{margin:10px 0;color:#616161;}
-.hotdeal_card .inner .pricing .current{display:block;font-size:25px;color:#87c442;font-weight:600;}
-.hotdeal_card .inner .pricing .was{font-size:12px;}
-.hotdeal_card .inner .pricing em{text-decoration:line-through;font-size:13px;}
-.hotdeal_card .inner .btn{}
-.hotdeal_card .inner .btn a{text-decoration:none;text-align:center;display:block;color:#616161;border:1px solid #ccc;padding:7px 10px;border-radius:3px;}
-.hotdeal_card .inner .btn a em{text-decoration:line-through;}
-.hotdeal_card .inner .btn a:hover{background:#000;color:#fff;border:1px solid #000;}
+
 
 /* Show Page */
 .show_wrap .show_box .show_inner .hotdeal_inner{}
@@ -63,5 +51,45 @@
 /* Form Page */
 .hotdeal_form{}
 .hotdeal_form input, .hotdeal_form textarea{display:block;width:70%;height:40px;margin-bottom:15px;}
+
+
+.hotdeal_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
+.hotdeal_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
+.hotdeal_card .image_box{width:100%;height:250px;padding:15px 15px 5px 15px;}
+.hotdeal_card img{width:100%;height:100%;position:relative;object-fit:contain;}
+.hotdeal_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
+.hotdeal_card .buy-now span{}
+.hotdeal_card .buy-now span a{text-decoration:none;color:#fff;}
+.hotdeal_card .buy_now{z-index:20;}
+.hotdeal_card figcaption{padding:20px;}
+.hotdeal_card h3, .hotdeal_card p{margin:0;}
+.hotdeal_card h3{font-size:20px;font-weight:700;margin-bottom:10px;text-transform:uppercase;}
+.hotdeal_card p{font-size:0.9em;letter-spacing:1px;font-weight:400;line-height:1.4;height:4.2em;overflow:hidden;}
+.hotdeal_card .price{font-weight:500;font-size:1.5em;line-height:48px;letter-spacing:1px;}
+.hotdeal_card .price s{margin-right:5px;opacity:0.5;font-size:0.9em;}
+.hotdeal_card a.btn{position:absolute;top:0;bottom:0;left:0;right:0;}
+.hotdeal_card .m_btn{display:none;background:#000;padding:5px;text-align:center;}
+.hotdeal_card .m_btn a{text-decoration:none;color:#fff;}
+.hotdeal_card:hover .buy-now,
+.hotdeal_card:hover .buy-now {opacity:1;-webkit-transform:rotateX(0deg);transform:rotateX(0deg);}
+
+
+@media screen and (max-width:640px){
+  .hotdeal_card{width:48%;}
+  .hotdeal_card .buy-now{display:none;}
+  .hotdeal_card .image_box{height:200px;padding:10px 10px 10 10px;}
+  .hotdeal_card h3{font-size:14px;}
+  .hotdeal_card p{font-size:13px;line-height:1.2;height:3.6em;}
+  .hotdeal_card .price{font-size:15px;}
+  .hotdeal_card .m_btn{display:block;padding:3px;}
+  .hotdeal_card .m_btn a{font-size:14px;}
+  .hotdeal_card figcaption{padding:5px 10px 10px 10px;}
+}
+
+@media screen and (min-width:641px) and (max-width:1199px){
+  .hotdeal_card{width:48%;}
+  .hotdeal_card .buy-now{display:block;}
+  .hotdeal_card .m_btn{display:block;}
+}
 
 
