--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -5,101 +5,94 @@
   <div class="wrap">  
   <%= render 'shared/header_short' %>
   <%= render 'hotdeals/header' %>    
+
+  <% @hotdeals.each do |hotdeal| %>
+      <figure class="hotdeal_card">
+        <div class="image_box"><img src="<%= hotdeal.h_image %>"/></div>
+        <div class="buy-now"><span><a target="_blank" href="<%= hotdeal.h_link %>">BUY NOW</a></span></div>
+        <figcaption>
+          <h3>Kurie Secco</h3>
+          <p><%= hotdeal.h_title %></p>
+          <div class="price">
+            <s>$<%= hotdeal.h_list_price %></s>$<%= hotdeal.h_price %>
+          </div>
+          <div class="m_btn"><a href="#n">Buy Now</a></div>
+        </figcaption><a class="btn" href="/hotdeals/<%= hotdeal.id %>"></a>
+      </figure>
+    <% end %>
+
+    <!-- <figure class="hotdeal_card">
+      <div class="image_box"><img src="https://images-na.ssl-images-amazon.com/images/I/61z5oOk5fzL._SY879_.jpg"/></div>
+      <div class="buy-now"><span><a target="_blank" href="https://amzn.to/2IzZsOl">buy now</a></span></div>
+      <figcaption>
+        <h3>Kurie Secco</h3>
+        <p>If you do the job badly enough, sometimes you don't get asked to do it again. </p>
+        <div class="price">
+          <s>$24.00</s>$19.00
+        </div>
+      </figcaption><a class="btn" href="#"></a>
+    </figure>
+
+    <figure class="hotdeal_card">
+      <div class="image_box"><img src="https://images-na.ssl-images-amazon.com/images/I/51dBsN4fpBL._SX522_.jpg"/></div>
+      <div class="buy-now"> <i class="ion-android-add"></i><span>Add to Cart</span></div>
+      <figcaption>
+        <h3>Zosaisan Invec</h3>
+        <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life. </p>
+        <div class="price">
+          <s>$24.00</s>$19.00
+        </div>
+      </figcaption><a href="#"></a>
+    </figure>
+
+    <figure class="hotdeal_card">
+      <div class="image_box"><img src="https://images-na.ssl-images-amazon.com/images/I/61z5oOk5fzL._SY879_.jpg"/></div>
+      <div class="buy-now"> <i class="ion-android-add"></i><span>Add to Cart</span></div>
+      <figcaption>
+        <h3>Kurie Secco</h3>
+        <p>If you do the job badly enough, sometimes you don't get asked to do it again. </p>
+        <div class="price">
+          <s>$24.00</s>$19.00
+        </div>
+      </figcaption><a href="#"></a>
+    </figure>
+
+    <figure class="hotdeal_card">
+      <div class="image_box"><img src="https://images-na.ssl-images-amazon.com/images/I/61z5oOk5fzL._SY879_.jpg"/></div>
+      <div class="buy-now"><span><a target="_blank" href="https://amzn.to/2IzZsOl">buy now</a></span></div>
+      <figcaption>
+        <h3>Kurie Secco</h3>
+        <p>If you do the job badly enough, sometimes you don't get asked to do it again. </p>
+        <div class="price">
+          <s>$24.00</s>$19.00
+        </div>
+      </figcaption><a class="btn" href="#"></a>
+    </figure>
+
+    <figure class="hotdeal_card">
+      <div class="image_box"><img src="https://images-na.ssl-images-amazon.com/images/I/51dBsN4fpBL._SX522_.jpg"/></div>
+      <div class="buy-now"> <i class="ion-android-add"></i><span>Add to Cart</span></div>
+      <figcaption>
+        <h3>Zosaisan Invec</h3>
+        <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life. </p>
+        <div class="price">
+          <s>$24.00</s>$19.00
+        </div>
+      </figcaption><a href="#"></a>
+    </figure>
+
+    <figure class="hotdeal_card">
+      <div class="image_box"><img src="https://images-na.ssl-images-amazon.com/images/I/61z5oOk5fzL._SY879_.jpg"/></div>
+      <div class="buy-now"> <i class="ion-android-add"></i><span>Add to Cart</span></div>
+      <figcaption>
+        <h3>Kurie Secco</h3>
+        <p>If you do the job badly enough, sometimes you don't get asked to do it again. </p>
+        <div class="price">
+          <s>$24.00</s>$19.00
+        </div>
+      </figcaption><a href="#"></a>
+    </figure> -->
   
-  <div class="codes common_layout">
-
-      <div class="lt_cnt note_pc">
-        <h2>Daily Deals of Amazon</h2>
-        <%= render 'deals/notes_bestdeals' %>
-      </div><!--./lt_cnt-->
-      
-      <div class="rt_cnt">
-        <h2>Daily Deals | Hand-Pick On Amazon Oct. 03. 2019.  <% if can? :update, @hotdeals %><div class="hotdeals_new"><%= link_to 'Add New Deals', new_hotdeal_path %></div><% end %></h2>
-        
-        <div class="sort_box clearfix">
-    
-          <ul>
-            <li><a href="/deals/bestdeals" class="pure-button">All Deals</a></li>
-            <li><a href="#" class="pure-button sort1">Price High</a></li>
-            <li><a href="#" class="pure-button sort2">Price Low</a></li>
-            <li><a href="#" class="pure-button sort3">Sale High</a></li>
-            <li><a href="#" class="pure-button sort4">Sale Low</a></li>
-          </ul>
-        </div>
-        
-        <div class="card_wrap sort-list">
-          <%= render 'shared/amz_search' %>
-          <%= render 'deals_days/note_wadiz' %>
-          <%= render 'hotdeals/body_hotdeals' %>
-
-        </div>
-
-        <!-- Note for mobile -->
-        <div class="lt_cnt note_mobile">
-          <h2>Daily Deals of Amazon</h2>
-          <%= render 'deals/notes_bestdeals' %>
-        </div>
-        <!-- End -->
-
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_01">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
-        
-        
-      </div><!--./rt_cnt-->    
-
-    
-    </div><!--./codes-->
-
-
-    <div class="hotdeal_card">
-      <div class="card_image"><img src="https://images-na.ssl-images-amazon.com/images/I/51hd7WEBurL.jpg"></div>
-      <div class="inner">
-        <p>Keto BHB - Exogenous Ketones - Carb-Free Energy Booster, Fuels Ketosis, Boosts Metabolism and Low Carb Diet Support for Healthy Weight Loss - 60 Capsules</p>
-        <div class="pricing">
-          <span class="current">$100.00</span>
-          <em>$200.00</em>&nbsp;<span class="was">(50% Off + free shipping)</span>
-        </div>
-        <div class="btn"><a href="#n">Buy Now</a></div>
-      </div>
-    </div>
-
-    <div class="hotdeal_card">
-      <div class="card_image"><img src="https://images-na.ssl-images-amazon.com/images/I/51hd7WEBurL.jpg"></div>
-      <div class="inner">
-        <p>Keto BHB - Exogenous Ketones - Carb-Free Energy Booster...</p>
-        <div class="pricing">
-          <span class="current">$100.00</span>
-          <em>$200.00</em><span class="was">50% Off</span>
-        </div>
-        <div class="btn"><a href="#n">Buy Now</a></div>
-      </div>
-    </div>
-
-    <div class="hotdeal_card">
-      <div class="card_image"><img src="https://images-na.ssl-images-amazon.com/images/I/51hd7WEBurL.jpg"></div>
-      <div class="inner">
-        <p>Keto BHB - Exogenous Ketones - Carb-Free Energy Booster...</p>
-        <div class="pricing">
-          <span class="current">$100.00</span>
-          <span class="was">50% Off</span><em>$200.00 </em>
-        </div>
-        <div class="btn"><a href="#n">Buy Now</a></div>
-      </div>
-    </div>
-
-    <div class="hotdeal_card">
-      <div class="card_image"><img src="https://images-na.ssl-images-amazon.com/images/I/51hd7WEBurL.jpg"></div>
-      <div class="inner">
-        <p>Keto BHB - Exogenous Ketones - Carb-Free Energy Booster...</p>
-        <div class="pricing">
-          <span class="current">$1,200.00</span>
-          <em>$1,500.00</em><span class="was">(50% Off + free shipping)</span>
-        </div>
-        <div class="btn"><a href="#n">Buy Now</a></div>
-      </div>
-    </div>
-
-
-
 
   </div><!--./warp-->
 </div><!--./layout-->
