--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -1,8 +1,8 @@
 <div class="layout"><!--layout-->
  <div class="wrap">   
-  <%= render 'shared/header' %>
+  <%= render 'shared/header_short' %>
   
-    <div class="cu_sub_nav">
+    <div class="cu_sub_nav guide_nav">
       <ul class="clearfix">
         <li><a href="/recommends">Editor's Pick Top 10</a></li>
         <li><a  class="active" href="/guides/index">Gift Guide</a></li>
@@ -25,14 +25,38 @@
           <div class="btn"><a href="/guides/Guide_Link">Read More</a></div>
         </div> -->
         
-        <div class="filter-node promotion_box" data-filter='["special","halloween"]'>
+        <!-- <div class="filter-node promotion_box" data-filter='["special","halloween"]'>
           <div class="image_box"><a href="/guides/halloween"><img src="https://images.unsplash.com/photo-1508361001413-7a9dca21d08a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="halloween"></a></div>
           <div class="node-box inner">
             <h2><a href="/guides/halloween">The Best Halloween Gift Ideas For Everyone</a></h2>
-            <!-- <span>Last Updated: Jul. 09. 2019</span> -->
           </div>
           <div class="btn"><a href="/guides/halloween">Read More</a></div>
         </div>
+ -->    <div class="filter-node" data-filter='["special","halloween"]'>
+          <figure class="snip1581">
+            <img src="https://images.unsplash.com/photo-1565377024937-5e947136c50c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="profile-sample2"/>
+            <figcaption>
+              <h3 class="title1">The</h3>
+              <h3 class="title2">Halloween</h3>
+              <h3 class="title3">Collection</h3>
+            </figcaption><a href="/guides/halloween"></a>
+          </figure>
+        </div>
+      
+        <figure class="snip1581"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample9.jpg" alt="profile-sample6"/>
+          <figcaption>
+            <h3 class="title1">The</h3>
+            <h3 class="title2">Autumn</h3>
+            <h3 class="title3">Collection</h3>
+          </figcaption><a href="#"></a>
+        </figure>
+        <figure class="snip1581"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample9.jpg" alt="profile-sample6"/>
+          <figcaption>
+            <h3 class="title1">The</h3>
+            <h3 class="title2">Autumn</h3>
+            <h3 class="title3">Collection</h3>
+          </figcaption><a href="#"></a>
+        </figure>
 
         
 
