--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,800,900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Anton');
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500,700);
+@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap&subset=latin-ext');
 h1,h2,h3,h4,h5,h6,p,ul,li,address,form,fieldset,legend,input,button,dl,dt,dd,table,thead,tbody,tfoot,tr,th,td{margin:0;padding:0;font-family:inherit;}
 /*기본여백 삭제, font-family:inherit;는 특정 태그는 body에서 지정한 서체를 상속받지 못함. 그래서 강제로 상속받도록 지정  */
 a img{border:0;}/* a태그로 감싼 이미지의 파란 테두리 삭제 (ie9-10) */
@@ -65,7 +66,7 @@ header .gnb_pc>a>.oh_logo{display:none;}
 header .visual{}
 header .visual img{width:100%;}
 
-header .gnb_pc>ul{float:right;margin-top:-6px;position:relative;}
+header .gnb_pc>ul{float:right;margin-top:-6px;position:relative;font-family: 'Righteous', cursive;}
 header .gnb_pc>ul>li.membership>a{font-size:20px;}
 header .gnb_pc>ul.sub_index_02{float:left;} /* for index_02 */
 header .gnb_pc>ul>li{float:left;width:340px;text-align:center;}
