--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -189,7 +189,10 @@
 
 
 /* Begin Gift Guide Main Page */
+
 .guide_wrap{margin:50px 0 0 0;font-family: 'Montserrat', sans-serif;} 
+/*.guide_nav{margin-left:100px;}*/
+/*.guide_wrap{width:1000px;margin:0 auto;}*/
 .guide_wrap .mt_info{margin:-40px 0 40px 0;padding:0 10px;color:#000;}
 .guide_wrap .mt_info h2{display:inline-block;}
 .guide_wrap .mt_info h2 span{color:#08f;}
@@ -484,4 +487,84 @@
   .most_wrapper{margin-top:-25px;}
 }
 /* End Promotion */
+
+
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Poppins:300,700);
+.snip1581 {
+  float:left;
+  width:23%;
+  font-family: 'Poppins:400,700', Arial, sans-serif;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  margin: 1%;
+  /*min-width: 250px;
+  max-width: 310px;*/
+  background-color: #000000;
+  color: #ffffff;
+  text-align: left;
+  font-size: 16px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+.snip1581 * {
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.snip1581 img {
+  width:100%; 
+  height:400px;
+  vertical-align: top;
+}
+.snip1581 figcaption {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.8) 0%, transparent 100%);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, transparent 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.snip1581 h3 {
+  font-size: 44px;
+  font-weight: 400;
+  line-height: 1;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin: 3px 0;
+}
+.snip1581 
+.snip1581 .title1 {
+  font-weight: 700;
+}
+.snip1581 .title2 {
+  color: #a58e7c;
+  font-weight: 300;
+  font-size:35px;
+}
+.snip1581 .title3 {
+  font-weight: 700;
+  font-size: 25px;
+}
+.snip1581 a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.snip1581:hover img,
+.snip1581.hover img {
+  -webkit-transform: scale(1.3) rotate(5deg);
+  transform: scale(1.3) rotate(5deg);
+}
+
 
