--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -1,14 +1,7 @@
 .hotdeal_wrap{margin-top:100px;}
-.hotdeals_nav{margin-top:80px;}
+.hotdeals_nav{margin-top:20px;}
 .hotdeals_new{display:inline-block;margin-left:20px;padding:0 10px;background:#000}
 .hotdeals_new a{text-decoration:none;color:#fff;}
-.show_banner{}
-.show_banner .banner_option{display:none;}
-.show_banner .banner_img{border-bottom:1px solid #ccc;padding-bottom:10px;}
-.show_banner .banner_img img{width:100%;}
-
-
-/* Index Page */
 
 
 /* Show Page */
@@ -33,25 +26,36 @@
 .hotdeal_related p{text-align:center;font-size:30px;margin-bottom:20px;}
 
 /* Form Page */
-.hotdeal_form{}
-.hotdeal_form input, .hotdeal_form textarea{display:block;width:70%;height:40px;margin-bottom:15px;}
+.hotdeal_form{width:800px;}
+.hotdeal_form input, .hotdeal_form textarea{display:block;width:100%;height:40px;margin-bottom:20px;}
+.hotdeal_form textarea{height:80px;}
+.hotdeal_form label{font-size:13px;}
+.hotdeal_form .pricing div{float:left;width:18%;margin:1%;}
 
 
 @media screen and (max-width:640px){
-  .hotdeals_nav{margin-top:80px;}
+  .hotdeals_nav{margin-top:10px;}
   .hotdeal_related{width:100%;}
   .hotdeal_related p{font-size:23px;}
+  .hotdeal_form{width:100%;}
+  .hotdeal_form input, .hotdeal_form textarea{border:2px solid #000;}
+  .hotdeal_form select{background:#000;color:#fff;padding:3px 7px;}
+  .hotdeal_form .pricing div{float:none;width:100%;margin:0;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
-  .hotdeals_nav{margin-top:80px;}
+  .hotdeals_nav{margin-top:10px;}
   .hotdeals_new a{font-size:15px;}
   .hotdeal_related{width:100%;}
+  .hotdeal_form{width:100%;}
+  .hotdeal_form input, .hotdeal_form textarea{border:2px solid #000;}
+  .hotdeal_form label{font-size:11px;}
+  .hotdeal_form select{background:#000;color:#fff;padding:3px 7px;}
 }
 
-/* Form Page */
-.hotdeal_form{}
-.hotdeal_form input, .hotdeal_form textarea{display:block;width:70%;height:40px;margin-bottom:15px;}
-
+/* Index Page */
+.dealpage_title{margin-top:60px;font-family: 'Righteous', cursive;}
+.dealpage_title p{position:relative;font-size:70px;}
+.dealpage_title p:after{position:absolute;height:10px;content:'';background:#000;width:50%;top:70%;-webkit-transform:translateY(-5px);transform:translateY(-5px);}
 
 .hotdeal_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
 .hotdeal_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
@@ -73,6 +77,11 @@
 .hotdeal_card:hover .buy-now,
 .hotdeal_card:hover .buy-now {opacity:1;-webkit-transform:rotateX(0deg);transform:rotateX(0deg);}
 
+/* banner */
+.show_banner{}
+.show_banner .banner_option{display:none;}
+.show_banner .banner_img{border-bottom:1px solid #ccc;padding-bottom:10px;}
+.show_banner .banner_img img{width:100%;}
 
 @media screen and (max-width:640px){
   .hotdeal_card{width:48%;}
@@ -84,12 +93,15 @@
   .hotdeal_card .m_btn{display:block;padding:3px;}
   .hotdeal_card .m_btn a{font-size:14px;}
   .hotdeal_card figcaption{padding:5px 10px 10px 10px;}
+  .dealpage_title p{font-size:30px;}
+  .dealpage_title p:after{height:5px;}
 }
-
 @media screen and (min-width:641px) and (max-width:1199px){
   .hotdeal_card{width:48%;}
   .hotdeal_card .buy-now{display:block;}
   .hotdeal_card .m_btn{display:block;}
 }
+
+
 
 
