--- a/app/views/hotdeals/_header.html.erb
+++ b/app/views/hotdeals/_header.html.erb
@@ -10,6 +10,7 @@
           <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
           <li class="coumos" ><a href="/deals/promotions">Coupon Codes & Promotions</a></li>
           <li><a href="/deals/quick_search">Quick Search</a></li>
+          <li><% if can? :update, @hotdeals %><%= link_to 'New Hotdeal', new_hotdeal_path %><% end %></li>
       </ul>
     </div>
     
@@ -22,6 +23,7 @@
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/promotions">COUPON CODES & PROMOTIONS,</a></li>
         <li><a href="/deals/quick_search">QUICK SEARCH</a></li>
+        <li><% if can? :update, @hotdeals %><%= link_to 'New Hotdeal', new_hotdeal_path %><% end %></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
