--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -4,6 +4,7 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
   <%= render 'shared/header_short' %>
+  <div class="dealpage_title"><p>The Best Bargain</p></div>
   <%= render 'hotdeals/header' %>    
 
   <% @hotdeals.each do |hotdeal| %>
