--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -4,10 +4,10 @@
   <div class="wrap">  
   <%= render 'shared/header' %>
 
-  <!-- <div class="deals_main_menu">
+<!--   <div class="deals_main_menu">
     <ul>
-      <li>Amazon</li>
-      <li>Stores</li>
+      <li><a href="">Amazon | </a></li>
+      <li class="nth_2"><a href="">Discover more deals</a></li>
     </ul>
   </div> -->
 
@@ -20,7 +20,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Daily Deals | Hand-Pick On Amazon Oct. 10. 2019.<% if can? :update, @hotdeals %><div class="hotdeals_new"><%= link_to 'New Hotdeal', new_hotdeal_path %></div><% end %></h2>
+        <h2>Daily Deals | Hand-Pick On Amazon Oct. 11. 2019.<% if can? :update, @hotdeals %><div class="hotdeals_new"><%= link_to 'New Hotdeal', new_hotdeal_path %></div><% end %></h2>
         
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
@@ -49,7 +49,7 @@
         </div>
         <!-- End -->
 
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_01">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_02">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
