--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -8,14 +8,14 @@
   <%= render 'hotdeals/header' %>    
 
   <% @hotdeals.each do |hotdeal| %>
-      <figure class="hotdeal_card">
+      <figure class="deals_card">
         <div class="image_box"><img src="<%= hotdeal.h_image %>"/></div>
         <div class="buy-now"><span><a target="_blank" href="<%= hotdeal.h_link %>">BUY NOW</a></span></div>
         <figcaption>
-          <h3>Kurie Secco</h3>
+          <h3>#hashtags</h3>
           <p><%= hotdeal.h_title %></p>
           <div class="price">
-            <s>$<%= hotdeal.h_list_price %></s>$<%= hotdeal.h_price %>
+            <em>$<%= hotdeal.h_list_price %></em>$<%= hotdeal.h_price %>
           </div>
           <div class="m_btn"><a href="#n">Buy Now</a></div>
         </figcaption><a class="btn" href="/hotdeals/<%= hotdeal.id %>"></a>
