--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -58,25 +58,25 @@
 .dealpage_title p:after,
 .deals_main_menu ul .nth_2 a:after{position:absolute;height:10px;content:'';background:#000;width:50%;top:70%;-webkit-transform:translateY(-5px);transform:translateY(-5px);}
 
-.hotdeal_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
-.hotdeal_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
-.hotdeal_card .image_box{width:100%;height:250px;padding:15px 15px 5px 15px;}
-.hotdeal_card img{width:100%;height:100%;position:relative;object-fit:contain;}
-.hotdeal_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
-.hotdeal_card .buy-now span{}
-.hotdeal_card .buy-now span a{text-decoration:none;color:#fff;}
-.hotdeal_card .buy_now{z-index:20;}
-.hotdeal_card figcaption{padding:20px;}
-.hotdeal_card h3, .hotdeal_card p{margin:0;}
-.hotdeal_card h3{font-size:20px;font-weight:700;margin-bottom:10px;text-transform:uppercase;}
-.hotdeal_card p{font-size:0.9em;letter-spacing:1px;font-weight:400;line-height:1.4;height:4.2em;overflow:hidden;}
-.hotdeal_card .price{font-weight:500;font-size:1.5em;line-height:48px;letter-spacing:1px;}
-.hotdeal_card .price s{margin-right:5px;opacity:0.5;font-size:0.9em;}
-.hotdeal_card a.btn{position:absolute;top:0;bottom:0;left:0;right:0;}
-.hotdeal_card .m_btn{display:none;background:#000;padding:5px;text-align:center;}
-.hotdeal_card .m_btn a{text-decoration:none;color:#fff;}
-.hotdeal_card:hover .buy-now,
-.hotdeal_card:hover .buy-now {opacity:1;-webkit-transform:rotateX(0deg);transform:rotateX(0deg);}
+.deals_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
+.deals_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
+.deals_card .image_box{width:100%;height:250px;padding:15px 15px 5px 15px;}
+.deals_card img{width:100%;height:100%;position:relative;object-fit:contain;}
+.deals_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
+.deals_card .buy-now span{}
+.deals_card .buy-now span a{text-decoration:none;color:#fff;}
+.deals_card .buy_now{z-index:20;}
+.deals_card figcaption{padding:20px;}
+.deals_card h3, .deals_card p{margin:0;}
+.deals_card h3{font-size:20px;font-weight:700;margin-bottom:10px;z-index:101;}
+.deals_card p{font-size:0.9em;letter-spacing:1px;font-weight:400;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
+.deals_card .price{font-weight:500;font-size:1.5em;line-height:48px;letter-spacing:1px;}
+.deals_card .price em{margin-right:5px;opacity:0.5;font-size:0.9em;}
+.deals_card a.btn{position:absolute;top:0;bottom:0;left:0;right:0;}
+.deals_card .m_btn{display:none;background:#000;padding:5px;text-align:center;}
+.deals_card .m_btn a{text-decoration:none;color:#fff;}
+.deals_card:hover .buy-now,
+.deals_card:hover .buy-now {opacity:1;-webkit-transform:rotateX(0deg);transform:rotateX(0deg);}
 
 /* banner */
 .show_banner{}
@@ -85,22 +85,24 @@
 .show_banner .banner_img img{width:100%;}
 
 @media screen and (max-width:640px){
-  .hotdeal_card{width:48%;}
-  .hotdeal_card .buy-now{display:none;}
-  .hotdeal_card .image_box{height:200px;padding:10px 10px 10 10px;}
-  .hotdeal_card h3{font-size:14px;}
-  .hotdeal_card p{font-size:13px;line-height:1.2;height:3.6em;}
-  .hotdeal_card .price{font-size:15px;}
-  .hotdeal_card .m_btn{display:block;padding:3px;}
-  .hotdeal_card .m_btn a{font-size:14px;}
-  .hotdeal_card figcaption{padding:5px 10px 10px 10px;}
-  .dealpage_title p{font-size:30px;}
+  .deals_card{width:48%;}
+  .deals_card .buy-now{display:none;}
+  .deals_card .image_box{height:200px;padding:10px 10px 10 10px;}
+  .deals_card h3{font-size:14px;}
+  .deals_card p{font-size:13px;line-height:1.2;height:3.6em;}
+  .deals_card .price{font-size:15px;}
+  .deals_card .m_btn{display:block;padding:3px;}
+  .deals_card .m_btn a{font-size:14px;}
+  .deals_card figcaption{padding:5px 10px 10px 10px;}
+  .dealpage_title p{font-size:35px;}
   .dealpage_title p:after{height:5px;}
+  .deals_main_menu ul .nth_2 a:after{height:7px;top:67%;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
-  .hotdeal_card{width:48%;}
-  .hotdeal_card .buy-now{display:block;}
-  .hotdeal_card .m_btn{display:block;}
+  .deals_card{width:48%;}
+  .dealpage_title p{font-size:55px;}
+  .deals_card .buy-now{display:block;}
+  .deals_card .m_btn{display:block;}
 }
 
 
