--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -5,7 +5,11 @@
   <div class="wrap">  
   <%= render 'shared/header_short' %>
   <div class="dealpage_title"><p>The Best Bargain</p></div>
-  <%= render 'hotdeals/header' %>    
+  <%= render 'hotdeals/header' %>  
+
+  <div class="search_box">
+    
+  </div>  
 
   <% @hotdeals.each do |hotdeal| %>
       <figure class="deals_card">
